/**
 * 编译工具版本
 */
syntax = "proto3";
/**
 * 指定生成实体
 */
option java_multiple_files = true;
/**
 * 指定生成接口
 */
option java_generic_services = true;
/**
 * 声明包
 */
package com.weiguowei.grpc.server;

/**
 * 商品服务proto文件
 */
option java_outer_classname = "CouponServer";

/**
 * 统一返回实体
 */
message CouponServerResponse {
  string message = 1;
  int32 code = 2;
  string data=3;
}

/**
 * 声明接口
 */
service CouponService {
  rpc deductCouponInventory (DeductCouponRequest) returns (CouponServerResponse);
}

/**
 * 声明扣减商品库存实体
 */
message DeductCouponRequest {
  int32 couponId = 1;
}
